# getargs-derive

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: error.rs  lib.rs
