[package]
name = "getargs-derive-macros"
version = "0.1.0"
edition = "2024"
description = "Internal proc-macro implementation for getargs-derive"
license = "MIT"
repository = "https://github.com/alix-anneraud/getargs-derive"
publish = false

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
